Fix small style issues

--- a/src/assets/fonts/fonts.css
+++ b/src/assets/fonts/fonts.css
@@ -15,6 +15,13 @@
 @font-face {
   font-family: 'Euclid Circular B';
   font-style: normal;
+  font-weight: 600;
+  src: url('./EuclidCircularB-Semibold.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Euclid Circular B';
+  font-style: normal;
   font-weight: 700;
   src: url('./EuclidCircularB-Bold.woff2') format('woff2');
 }
