--- a/src/assets/fonts/fonts.css
+++ b/src/assets/fonts/fonts.css
@@ -1,34 +1,47 @@
 @font-face {
-  font-family: 'Euclid Circular B';
-  font-style: normal;
-  font-weight: 400;
-  src: url('./EuclidCircularB-Regular.woff2') format('woff2');
+  font-family: 'MM Sans';
+  font-weight: 1 1000;
+  src: url('./MM-Sans-Variable.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'Euclid Circular B';
+  font-family: 'Centra No1';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./CentraNo1-Book.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Centra No1';
+  font-style: italic;
+  font-weight: 400;
+  src: url('./CentraNo1-Book-Italic.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Centra No1';
   font-style: normal;
   font-weight: 500;
-  src: url('./EuclidCircularB-Medium.woff2') format('woff2');
+  src: url('./CentraNo1-Medium.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'Euclid Circular B';
-  font-style: normal;
-  font-weight: 600;
-  src: url('./EuclidCircularB-Semibold.woff2') format('woff2');
+  font-family: 'Centra No1';
+  font-style: italic;
+  font-weight: 500;
+  src: url('./CentraNo1-Medium-Italic.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'Euclid Circular B';
+  font-family: 'Centra No1';
   font-style: normal;
   font-weight: 700;
-  src: url('./EuclidCircularB-Bold.woff2') format('woff2');
+  src: url('./CentraNo1-Bold.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'IBM Plex Mono';
-  font-style: normal;
-  font-weight: 400;
-  src: url('./IBMPlexMono-Regular.woff2') format('woff2');
+  font-family: 'Centra No1';
+  font-style: italic;
+  font-weight: 700;
+  src: url('./CentraNo1-Bold-Italic.woff2') format('woff2');
 }
